fix z-index of splash nav and fix clicking bottom section of splash 1

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -14,7 +14,7 @@
 	position: fixed;
 	left: 7%;
 	top: 35%;
-	z-index: 2;
+	z-index: 5;
 	display: flex;
 	flex-direction: column;
 	font-size: 0.9rem;
